# chineseocr_lite_tensorRT

./: CMakeLists.txt  README.md
include/: anglenet.h  common.hpp  crnn_net.h  dbnet.h  ocr_lite.h  ocr_utils.h
results/: 1.jpg-result.txt  motto.png-result.txt  test.png-result.txt
src/: anglenet.cpp  crnn_net.cpp  dbnet.cpp  main.cpp  ocr_lite.cpp  ocr_utils.cpp
weights/: angle_net.engine  dbnet.engine
